Use com.example as default repository ID, android gradle 8